test/features/errors/semantic/e1020_argument_count_mismatch.spl
# E1020: Argument Count Mismatch

Feature: E1020 - Argument Count Mismatch
  As a Simple compiler
  I want to detect when functions are called with wrong number of arguments
  So that function calls match their signatures

  Background:
    Given I have the Simple compiler

  Scenario: Too few arguments provided
    When I compile:
      '''
      fn add(a: i32, b: i32) -> i32:
        a + b

      val result = add(5)  # Error: expected 2 args, got 1
      '''
    Then I should see error E1020 at line 5
    And the error message should be "function expects 2 argument(s), but 1 were provided"
    And the error should point to "add(5)"
    And the help text should suggest "check the function signature"

  Scenario: Too many arguments provided
    When I compile:
      '''
      fn greet(name: str):
        print("Hello, {name}!")

      greet("Alice", "Bob")  # Error: expected 1 arg, got 2
      '''
    Then I should see error E1020 at line 4
    And the error message should be "function expects 1 argument(s), but 2 were provided"

  Scenario: Method call with wrong argument count
    When I compile:
      '''
      struct Point:
        x: i32
        y: i32

      impl Point:
        fn distance(other: Point) -> f64:
          # implementation

      val p1 = Point(0, 0)
      val p2 = Point(3, 4)
      val d = p1.distance()  # Error: missing argument
      '''
    Then I should see error E1020 at line 12
    And the error should indicate "method expects 1 argument"

  Scenario: Variadic function (future feature)
    When I compile:
      '''
      fn printf(fmt: str, ...args):  # Variadic function
        # implementation

      printf("Hello")  # Should be valid - no minimum args after fmt
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      fn multiply(x: i32, y: i32) -> i32:
        x * y

      multiply(3)  # 인수 1개 제공, 2개 필요
      '''
    Then I should see error E1020 at line 4
    And the error message should contain "함수는 2개의 인수를 기대하지만 1개가 제공되었습니다"

  Scenario: Zero-argument function called with arguments
    When I compile:
      '''
      fn get_random() -> i32:
        42

      val r = get_random(100)  # Error: expected 0 args, got 1
      '''
    Then I should see error E1020
    And the error message should be "function expects 0 argument(s), but 1 were provided"

  Scenario: Correct argument count succeeds
    When I compile:
      '''
      fn calculate(a: i32, b: i32, c: i32) -> i32:
        a + b * c

      val result = calculate(10, 20, 30)  # Correct: 3 args
      '''
    Then compilation should succeed
